--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -344,7 +344,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 					                // get link for current category
 					                $more_url = $_ccat->getUrl(); 
 					                $current_url = $this->helper('core/url')->getCurrentUrl();
-									echo "<p>current url: " + $current_url + "</p><p>prev url: " + $prev_url + "</p>";
+									echo "<p>current url: " . $current_url . "</p><p>prev url: " . $prev_url . "</p>";
 					            ?>
 								<section id="prevNextLinks">
 									<?php if ($current_url == $prev_url) {} else { ?>
