--- a/app/design/frontend/default/rooja/template/checkout/cart/noItems.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/noItems.phtml
@@ -26,10 +26,10 @@
 ?>
 <div class="container">
 	<section class="cart emptyCart">
-    <h1>Shopping Cart is Empty</h1>
+    <h1>Shopping Bag is Empty</h1>
 
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-    <p><?php echo $this->__('You have no items in your shopping cart.') ?></p>
+    <p>You have no items in your shopping bag</p>
     <?php echo $this->__('<a href="%s" id="continueShoppingBtn">Click here to continue shopping</a>', $this->getContinueShoppingUrl()) ?>
 	</section>
 </div>
