--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -113,7 +113,7 @@
 </script>
 <h1 id="checkoutHeader">Checkout</h1>
 <span class="fr" id="checkoutQuestions">Questions? <a href="/contact">Contact Us</a></span>
-<a href="/checkout/cart" class="goBack clear" id="backToCart">Click here to Edit your Cart, Add Credits or a Promo Code</a>
+<a href="/checkout/cart" class="goBack clear" id="backToCart">Click here to edit your shopping bag, add credits or a promo code</a>
 
 <ol class="opc" id="checkoutSteps">
 <?php 
