--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -157,7 +157,7 @@
 	</div>
 	<div style="display:none" id="getInvitedCont">
 	<h2 id="earlyAccess" class="tr">Become a Member</h2>
-	<p>Get invited to the pre-launch sale in October 2011. Free shipping within India.</p>
+	<p>Join our members-only community and shop must have brands at up to 60% off retail</p>
 	<link href="http://my.betali.st/widget/y2jd9dtr.css" rel="stylesheet" /><script src="http://my.betali.st/widget/y2jd9dtr.js" id="MyBetaList"></script>
 	
 	<p class="alignRight">Free membership by invitation only.</p>
