--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -76,7 +76,7 @@
         <?php if ($_subtotalInclTax = $this->getSubtotalInclTax()): ?>
             <br />(<?php echo Mage::helper('checkout')->formatPrice($_subtotalInclTax) ?> <?php echo Mage::helper('tax')->getIncExcText(true) ?>)
         <?php endif; ?><br /><br /><a href="#" class="continueShoppingLink">Continue Shopping</a>
-<a href="/checkout/onepage/" id="checkoutBtn">Proceed to Checkout</a>
+<a href="/checkout/cart/" id="checkoutBtn">Proceed to Cart</a>
     </div>
 <div class="clear"></div>
     </div>
