assorted final fixes

--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -158,7 +158,7 @@ P.S. Hurry!"/>
 		</header><!--End Header-->
 		<section id="content" class="body static">
 			<h2 id="contactHeader" class="tr">Contact Us</h2>
-			<p>For general inquiries, help &amp; support and press and media requests please use the form below or email us at <a href="mailto:support@rooja.in">support@rooja.in</a>.</p>
+			<p>For general inquiries, help &amp; support and press and media requests please use the form below or email us at <a href="mailto:support@rooja.in">support@rooja.in</a>. You can also reach us at +91-8080622277 for Customer Care.</p>
 			
 			<form action="/contacts/index/post" id="contactForm" method="post">
 				<label for="name">Your Name:</label>
