--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -177,7 +177,7 @@ if (!$categoryIds == null){
 				<section id="reverseAuction">
 					
 					<p id="likeThis">
-					<fb:like layout="button_count" width="60" style="margin:3px 0 0;float:right" title="Rooja: <?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?>"></fb:like>
+					<fb:like layout="button_count" width="60" style="margin:3px 0 0;float:left" title="Rooja: <?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?>"></fb:like>
 					
 					
 					<?php
