--- a/app/design/frontend/base/default/template/onestepcheckout/billing_fields.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/billing_fields.phtml
@@ -154,7 +154,7 @@ $billingFields['country_id'] = '
 <?php endif; ?>
 
 <?php
-    try {
+   /* try {
         $_dob = $this->getLayout()->createBlock('customer/widget_dob');
     } catch (Exception $e) {
         $_dob = false;
@@ -219,7 +219,7 @@ $billingFields['country_id'] = '
             </div>
         </li>';
     ?>
-<?php endif; ?>
+<?php endif;*/ ?>
 
 <?php if ($this->isCustomerLoggedIn() && $this->customerHasAddresses()):?>
     <?php $billingFields['save_in_address_book'] = '
