--- a/skin/frontend/base/default/onestepcheckout/onestepcheckout.css
+++ b/skin/frontend/base/default/onestepcheckout/onestepcheckout.css
@@ -840,10 +840,12 @@ div.onestepcheckout-comments textarea {
     height: 40px;
     background: #D68533;
     padding: 2px 10px;
-    font: normal 12px/40px Arial, Helvetica, sans-serif;
+    font: normal 12px/30px Arial, Helvetica, sans-serif;
     text-align: center;
     white-space: nowrap;
     color: white;
     width: auto;
     margin: 0;
+    border:none;
+    cursor:pointer;
 }
