one step checkout tweak

--- a/skin/frontend/base/default/onestepcheckout/onestepcheckout.css
+++ b/skin/frontend/base/default/onestepcheckout/onestepcheckout.css
@@ -118,6 +118,7 @@ ul.onestepcheckout-custom-options {
     {
     padding: 8px 0;
     font-size:13px;
+    line-height:1.2em;
 }
 
 .onestepcheckout-summary th {
