one click checkout

--- a/app/design/frontend/base/default/template/onestepcheckout/billing_fields.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/billing_fields.phtml
@@ -89,14 +89,14 @@ $billingFields['country_id'] = '
 <?php if(!$this->settings['exclude_region']): ?>
     <?php $billingFields['region_id'] = '
         <div class="input-box input-region'.((in_array('region', $formErrors)) ? ' input-error' : '').'">
-            <label for="billing:region">'.$this->__('State/Province').' <span class="required">*</span></label><br/>
+            <label for="billing:region">State/Province <span class="required">*</span></label><br/>
             <select id="billing:region_id" name="billing[region_id]" title="'.$this->__('State/Province').'" class="validate-select" style="display:none">
                 <option value="">'.$this->__('Please select region, state or province').'</option>
             </select>
             <script type="text/javascript">
                 $("billing:region_id").setAttribute("defaultValue",  "'.$dataHelper->clearDash($this->getQuote()->getBillingAddress()->getRegionId()).'");
             </script>
-            <input type="text" id="billing:region" name="billing[region]" value="'.$this->htmlEscape($dataHelper->clearDash($this->getQuote()->getBillingAddress()->getRegion())).'"  title="'.$this->__('State/Province').'" class="required-entry input-text" style="display:none" />
+            <input type="text" id="billing:region" name="billing[region]" value="'.$this->htmlEscape($dataHelper->clearDash($this->getQuote()->getBillingAddress()->getRegion())).'"  title="State/Province" class="required-entry input-text" style="display:none" />
         </div>';
     ?>
 <?php endif; ?>
