assorted checkout pages

--- a/app/design/frontend/base/default/template/onestepcheckout/shipping_method.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/shipping_method.phtml
@@ -24,7 +24,7 @@
  * @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-
+	<p><strong>Free Shipping on orders more than Rs. 5000</strong></p>
 <?php if (!($_shippingRateGroups = $this->getShippingRates())): ?>
     <p><strong><?php echo $this->__('Sorry, no quotes are available for this order at this time.') ?></strong></p>
 <?php else: ?>
