--- a/app/design/frontend/base/default/template/onestepcheckout/payment_method.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/payment_method.phtml
@@ -93,6 +93,8 @@ if($helper->settings['hide_nonfree_payment_methods'])   {
         </dl>
     <?php endif;?>
 </div>
+<p id="hintText"></p>
+<div id="hintImg"></div>
 <script type="text/javascript">
 //<![CDATA[
 
@@ -153,4 +155,22 @@ if(cBalance){
 payment.switchMethod(payment.currentMethod);
 <?php echo $this->getChildHtml('giftcardaccount_scripts');?>
 //]]>
+</script>
+<script>
+(function ($) {
+	$(document).ready(function(){
+$(".payment-methods input").live('change', function() {
+	
+	if($('#p_method_cashondelivery').is(':checked')) { 
+		$("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-8080622277 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders. <br><br>The maximum limit for a COD order is Rs 20,000 outside of New Delhi and Gurgaon.');
+		$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cod.png'); ?>" alt="Security" id="secureLogos">');
+	}
+	if($('#p_method_Avenues_standard').is(':checked')) { 
+		$("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
+		$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cc.png'); ?>" alt="Security" id="secureLogos">');
+	}
+});
+
+});
+})(jQuery);
 </script>
