--- a/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
@@ -8,7 +8,7 @@ $helper = Mage::helper('onestepcheckout/checkout');
     <?php if($this->settings['checkout_title']): ?>
         <h1 class="onestepcheckout-title"><?php echo $this->settings['checkout_title']; ?></h1>
     <?php endif; ?>
-
+	<span class="fr" id="checkoutQuestions">Questions? <a href="/contact">Contact Us</a></span>
     <?php if($this->canCheckout() && !$this->validateMinimumAmount()): ?>
     <p><?php echo Mage::getStoreConfig('sales/minimum_order/description'); ?></p>
     <p><a href="<?php echo $this->getUrl(''); ?>"><?php echo $this->__('Back to homepage'); ?></a></p>
