one step checkout title

--- a/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
@@ -24,6 +24,7 @@ $helper = Mage::helper('onestepcheckout/checkout');
 
 <?php if($this->settings['checkout_title']): ?>
     <h1 class="onestepcheckout-title"><?php echo $this->settings['checkout_title']; ?></h1>
+<span class="fr" id="checkoutQuestions">Questions? <a href="/contact">Contact Us</a></span>
 <?php endif; ?>
 
 <?php if($this->settings['checkout_description']): ?>
