--- a/app/design/frontend/base/default/template/rewards/sales/order/view/points.phtml
+++ b/app/design/frontend/base/default/template/rewards/sales/order/view/points.phtml
@@ -43,7 +43,7 @@
  */
 ?>
 <?php
-$colspan = 4;
+$colspan = 4;/*
 ?>
 <?php if ($this->getOrder()->hasPointsEarning()): ?>
     <tr class="order-points-earned">
@@ -56,4 +56,4 @@ $colspan = 4;
         <td colspan="4" class="a-right caption"><?php echo $this->__('Points Spent') ?></td>
         <td class="last a-right"><span class="amount"><?php echo $this->getPointsSpentString() ?></span></td>
     </tr>
-<?php endif; ?>
+<?php endif; */?>
