--- a/app/design/frontend/base/default/template/onestepcheckout/payment_method.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/payment_method.phtml
@@ -168,7 +168,7 @@ $(".payment-methods input").live('change', function() {
 	}
 	if($('#p_method_Avenues_standard').is(':checked')) { 
 		$("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
-		$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cc.png'); ?>" alt="Security" id="secureLogos">');
+		$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/veri-2.png'); ?>" alt="Security" id="secureLogos">');
 	}
 });
 
