--- a/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
@@ -4,6 +4,25 @@ $step_counter = 1;
 $helper = Mage::helper('onestepcheckout/checkout');
 
 ?>
+<script>
+(function ($) {
+	$(document).ready(function(){
+	
+$(".payment-methods input").live('change', function() {
+	
+	if($('#p_method_cashondelivery').is(':checked')) { 
+		$("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-8080622277 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders. <br><br>The maximum limit for a COD order is Rs 20,000 outside of New Delhi and Gurgaon.');
+		$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cod.png'); ?>" alt="Security" id="secureLogos">');
+	}
+	if($('#p_method_Avenues_standard').is(':checked')) { 
+		$("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
+		$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/veri-2.png'); ?>" alt="Security" id="secureLogos">');
+	}
+});
+
+});
+})(jQuery);
+</script>
 <?php if(!$this->canCheckout() || !$this->validateMinimumAmount()): ?>
     <?php if($this->settings['checkout_title']): ?>
         <h1 class="onestepcheckout-title"><?php echo $this->settings['checkout_title']; ?></h1>
