--- a/app/design/frontend/default/rooja/template/onestepcheckout/summary.phtml
+++ b/app/design/frontend/default/rooja/template/onestepcheckout/summary.phtml
@@ -11,58 +11,53 @@ $checkoutHelper = Mage::helper('onestepcheckout/checkout');
             <th class="total"><?php echo $this->__('Subtotal'); ?></th>
         </tr>
     </thead>
-    <?php echo $this->renderTotals(); ?>
-	<?php echo $this->renderTotals('footer'); ?>
-</table>
+    <?php foreach($this->getItems() as $item): ?>
+    <tr>
+        <td class="name">
+            <?php echo $item->getName(); ?>
+            <?php if($checkoutHelper->settings['show_custom_options']): ?>
+                <?php $options = $item->getProduct()->getTypeInstance(true)->getOrderOptions($item->getProduct()); ?>
+                <?php if(isset($options['options']) && count($options['options']) > 0): ?>
+                <ul class="onestepcheckout-custom-options">
+                <?php foreach($options['options'] as $option): ?>
+                    <li><b><?php echo $option['label'] . ':</b> ' . $option['value']; ?></li>
+                <?php endforeach; ?>
+                </ul>
+                <?php endif; ?>
 
-<table class="onestepcheckout-totals">
-    <?php foreach($this->getTotals() as $total): ?>
-    <?php if(!$total->getTitle()){continue;}?>
-        <?php
-        $fullInfo = $total->getFullInfo();
+                <?php if($item->getProduct()->isConfigurable()): ?>
 
-        if(!empty($fullInfo) && $checkoutHelper->settings['display_full_tax']):
-            foreach ($fullInfo as $info):
-                $rates = current($info['rates']);
-                $amount = $info['amount'];
-        ?>
-            <tr>
-                <td class="title"><?php echo $rates['title'] ?> (<?php echo $rates['percent'] ?>%)</td><td class="value"><?php echo $this->helper('checkout')->formatPrice($amount); ?></td>
-            </tr>
-        <?php endforeach;
-        endif;?>
-    <tr<?php if($total->getCode() == 'grand_total'): ?> class="grand-total"<?php endif; ?>>
-        <td class="title">
-            <?php
+                <?php
+                $configurable_options = $item->getProduct()->getTypeInstance(true)->getSelectedAttributesInfo($item->getProduct());
+                ?>
 
-            $code = $total->getCode();
-            $value = $total->getValue();
+                <?php if(is_array($configurable_options) && count($configurable_options) > 0): ?>
+                <ul class="onestepcheckout-custom-options">
+                <?php foreach($configurable_options as $option): ?>
+                    <li><b><?php echo $option['label']; ?>:</b> <?php echo $option['value']; ?></li>
+                <?php endforeach; ?>
+                </ul>
+                <?php endif; ?>
 
-            if($code == 'subtotal')    {
-                $total_name = $this->__('Subtotal');
-            }
-            elseif($code == 'shipping')    {
-                $total_name = $this->__('Shipping');
-                if($checkoutHelper->settings['display_tax_included'])   {
-                    $value += $this->getQuote()->getShippingAddress()->getShippingTaxAmount();
-                }
-                            }
-            elseif($code == 'grand_total')    {
-                $total_name = $this->__('Grand total');
-            }
-            else    {
-                $total_name = $total->getTitle();
-            }
+                <?php endif; ?>
 
-            echo $total_name;
-
-            ?>
+            <?php endif; ?>
         </td>
-        <td class="value">
-            <?php echo $this->helper('checkout')->formatPrice($value); ?>
+        <td class="qty"><?php echo $item->getQty(); ?></td>
+        <td class="total">
+            <?php if($checkoutHelper->settings['display_tax_included']): ?>
+            <?php echo $this->helper('checkout')->formatPrice($this->helper('checkout')->getSubtotalInclTax($item)); ?>
+            <?php else: ?>
+            <?php echo $this->helper('checkout')->formatPrice($item->getRowTotal()); ?>
+            <?php endif; ?>
         </td>
     </tr>
     <?php endforeach; ?>
+</table>
+
+<table class="onestepcheckout-totals">
+    <?php echo $this->renderTotals(); ?>
+	    <?php echo $this->renderTotals('footer'); ?>
 </table>
 <script type="text/javascript">
 //<![CDATA[
