--- a/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
@@ -43,7 +43,7 @@ $(".payment-methods input").live('change', function() {
 
 <?php if($this->settings['checkout_title']): ?>
     <h1 class="onestepcheckout-title"><?php echo $this->settings['checkout_title']; ?></h1>
-<span class="fr" id="checkoutQuestions">Questions? <a href="/contact">Contact Us</a></span>
+<span class="fr" id="checkoutQuestions"><!--Questions? <a href="/contact">Contact Us</a>-->NEED HELP ? Call +91-8080622277 | <a href="mailto:support@rooja.in" target="_blank">Email Customer Care</a> | <a href="/shipping-policy">Shipping Information</a> | <a href="/returns-and-exchanges">Return Policy</a></span>
 <?php endif; ?>
 
 <?php if($this->settings['checkout_description']): ?>
