proceed to checkout

--- a/app/design/frontend/base/default/template/rewards/customer/summary.phtml
+++ b/app/design/frontend/base/default/template/rewards/customer/summary.phtml
@@ -62,6 +62,7 @@
     
     		<?php echo $this->getSummaryMsg() /* this can be customized completely by modifying the display config option or by just removing this line and adding your own content.*/ ?>
 </p>
+<h4>Please proceed to Your Bag to use your Reward Points.</h4>
     
 	<?php if ($this->doShowRewardsLink()): ?><br/><br/>
 		<p><a class="reward-link" href="<?php echo $this->getUrl('rewards/customer'); ?>"><?php echo $this->__('View Your Rewards') ?></a></p>
