updated about us

--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -111,16 +111,12 @@ P.S. Hurry!"/>
 		<header id="mainHeader">
 
 			<h1 id="about" class="tr">About</h1>
-			<p>Rooja delivers hand picked selections of apparel, handbags, accessories and shoes to your doorstep in India. We bring you the best of brands and designers from all around the world at mouth-watering prices.</p>
+			<h3>Rooja.com is a membership by invitation website that holds brand specific sale events at 10 AM everyday. Each sale lasts for a few days and offers up to 60% in discounts. Best part, membership is free!</h3>
 			<div class="divider"></div>
 		</header><!--End Header-->
 		<section id="content" class="body">
-			<h2 id="howItWorks" class="tr">How it Works</h2>
-			<img src="/skin/frontend/default/rooja/images/splash/icons/man.png" alt="Join icon" class="fl hiwIcon"><p class="hiwText"><strong>Join:</strong> <a href="index.html">Apply to become a Rooja member</a> for access to our Invitation-only sales, exclusive events and giveaways.</p>
-
-			<img src="/skin/frontend/default/rooja/images/splash/icons/tag.png" alt="Tag icon" class="fl hiwIcon"><p class="hiwText"><strong>Shop:</strong> Events held on Rooja are for members only and last typically between 2 to 3 days. Each event is held only for the stated period - once ended, it is gone for good.</p>
-
-			<img src="/skin/frontend/default/rooja/images/splash/icons/heart.png" alt="Spread the love icon" class="fl hiwIcon"><p class="hiwText"><strong>Spread The Love:</strong> Invite your best friends and only those you want in our community. You decide who gets access to Rooja. Invite a friend and get shopping credits when your friend joins and makes their first purchase.</p>
+			<h2>Rooja&rsquo;s Products</h2>
+			<p>Rooja delivers hand picked selections of apparel, accessories and shoes. We bring you the best of brands and designers from all around the world at mouth-watering prices.</p>
 
 			<div class="divider clear"></div>
 
@@ -131,16 +127,12 @@ P.S. Hurry!"/>
 			<p>Stringent quality control before dispatch.</p>
 			<p>Full refund or store credit? Your choice.</p>
 			<p>A customer service team that loves to interact and is hungry to serve. We are always waiting for your call.</p>
-
 			<div class="divider"></div>
 
 			<h2 id="roojaValues" class="tr">Rooja&rsquo;s Core Beliefs:</h2>
-			<p><em>&ldquo;Warm-fuzzy feeling.&rdquo;</em></p>
+			<p><em>&ldquo;Feel Special&rdquo;</em></p>
 
-			<p>Rooja&rsquo;s raison d&rsquo;etre is to make your shopping experience as much fun as possible. We believe that shopping should be a thrill, an adventure, to own the product that you deeply desire. We believe the experience should end in what we call the &ldquo;warm-fuzzy feeling&rdquo; and we strive to achieve that for each of our members.</p>
-			<p><em>&ldquo;Stay true. Be an expressionista.&rdquo;</em></p>
-			<p>d. Expressionista: One who leads fashion by expressing his/her individuality through the products he/she owns.</p>
-			<p>Rooja believes in expressive couture. Our motto: <strong>Speak your style!</strong></p>
+			<p>We believe your observations, interactions and experiences make you special. At Rooja, we strive to create such experiences in every interaction you choose to have with us.</p>
 
 			<p><strong>Queries? Please email <a href="mailto:support@rooja.in">support@rooja.in</a></strong></p>
 
