rooja priducts header

--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -111,11 +111,11 @@ P.S. Hurry!"/>
 		<header id="mainHeader">
 
 			<h1 id="about" class="tr">About</h1>
-			<h3>Rooja.com is a membership by invitation website that holds brand specific sale events at 10 AM everyday. Each sale lasts for a few days and offers up to 60% in discounts. Best part, membership is free!</h3>
+			<p>Rooja.com is a membership by invitation website that holds brand specific sale events at 10 AM everyday. Each sale lasts for a few days and offers up to 60% in discounts. Best part, membership is free!</p>
 			<div class="divider"></div>
 		</header><!--End Header-->
 		<section id="content" class="body">
-			<h2>Rooja&rsquo;s Products</h2>
+			<h2 id="roojaProducts" class="tr">Rooja&rsquo;s Products</h2>
 			<p>Rooja delivers hand picked selections of apparel, accessories and shoes. We bring you the best of brands and designers from all around the world at mouth-watering prices.</p>
 
 			<div class="divider clear"></div>
