rooja priducts header

--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -267,7 +267,7 @@ h1#about{
     margin:18px 0; 
 }
 
-#roojaPromises{
+#roojaProducts{
     background-image:url(../images/splash/roojas-products.png);
     width:254px;height:19px;
     margin:18px 0; 
