--- a/skin/frontend/base/default/css/rewards/slider.css
+++ b/skin/frontend/base/default/css/rewards/slider.css
@@ -40,7 +40,8 @@ A.sliderHandle
 {
 	position: relative;
 	text-align: center;
-	top: -4px;
+	margin-top:5px;
+	font-size:12px;
 }
 .cartSlider_cell
 {
