--- a/skin/frontend/base/default/css/rewards/slider.css
+++ b/skin/frontend/base/default/css/rewards/slider.css
@@ -40,8 +40,7 @@ A.sliderHandle
 {
 	position: relative;
 	text-align: center;
-	margin-top:5px;
-	font-size:12px;
+	top: -4px;
 }
 .cartSlider_cell
 {
